deploy/kubernetes/managef.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
    project: mf
spec:
  type: LoadBalancer
  ports:
  - name: tcp
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: api
---
apiVersion: v1
kind: Service
metadata:
  name: worker
  labels:
    app: worker
    project: mf
spec:
  type: LoadBalancer
  ports:
  - name: tcp
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: worker
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  labels:
    app: api
    project: mf
spec:
  backend:
    serviceName: api
    servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
    project: mf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: api
      labels:
        app: api
        project: mf
    spec:
      serviceAccount: api
      containers:
      - image: ${IMAGE_NAME}:${IMAGE_VERSION}
        name: api
        command:
        ports:
          - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
    project: mf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: worker
      labels:
        app: worker
        project: mf
    spec:
      serviceAccount: api
      containers:
      - image: ${IMAGE_WORKER_NAME}:${IMAGE_WORKER_VERSION}
        name: worker
        command:
        ports:
          - containerPort: 8080
